# core_ips

./: CMakeLists.txt  CMakePresets.json  README.md
api/: CMakeLists.txt
api/core_ips/: sot_service.proto
cmake/: utilities.cmake
configs/: grpcserver.json  network.json  videoreader.json
controllers/: CMakeLists.txt  grpcserver.cpp  grpcserver.h  sotcontroller.cpp  sotcontroller.h  systemmonitor.cpp  systemmonitor.h  videoreader.cpp  videoreader.h
docs/: ffprobe_rtsp_check.md  gst-decode-rtsp.md  gst_decode_rtsp.md  jetson-system-information.md  jetson_inspection.md  logger_bench.md
entities/: CMakeLists.txt  sothandler.cpp  sothandler.h
entities/grpc_callback/: CMakeLists.txt  callbackbase.cpp  callbackbase.h  sotcallback.cpp  sotcallback.h
entities/inner/: CMakeLists.txt  sothandler.cpp  sothandler.h
entities/system_info/: CMakeLists.txt  power.cpp  power.h  temperature.cpp  temperature.h
entities/video_capture/: CMakeLists.txt  cvvideocapture.cpp  cvvideocapture.h  observerbase.cpp  observerbase.h  videochecker.cpp  videochecker.h
main/: CMakeLists.txt  main.cpp  session.cpp  session.h
scripts/: run.sh
utilities/: CMakeLists.txt  elapser.h  jsonparser.cpp  jsonparser.h  logger.cpp  logger.h  safequeue.h
